Compatibility fix for launching editors.